--- a/index.html
+++ b/index.html
@@ -7,17 +7,25 @@
 <body>
 
 <h1>Devon Rex</h1>
-Now I'll tell you a little about my friend's favorite breed of cats.
-The Devon Rex is a breed of intelligent, tall-eared, short-haired cat that emerged in England during the late 1950s.
+<p>Now I'll tell you a little about my friend's favorite breed of cats.</p>
+
+<p><img src="C:\Users\kirel\Documents\Универ\ITI0101 Sissejuhatus infotehnologasse\devon_reks2.jpg"
+        alt="Adult Devon Rex"></p>
+
+<p>The Devon Rex is a breed of intelligent, tall-eared, short-haired cat that emerged in England during the late 1950s.
 They are known for their slender bodies, wavy coat, and large ears.
-This breed of cat is capable of learning difficult tricks but can be hard to motivate.
+    This breed of cat is capable of learning difficult tricks but can be hard to motivate.</p>
 
-My friend would really like to have a cat, but she is allergic to animal hair.
-
+<p>My friend would really like to have a cat, but she is allergic to animal hair.
 She learned that animals of this breed are less likely to cause allergies and also tested this on herself.
 The Devon Rex is not allergic to her and is also a very friendly and loyal cat.
 If my friend seriously decides to get a cat, then I will definitely help her buy one,
-because the Devon Rex is a very expensive breed.
+    because the Devon Rex is a very expensive breed.</p>
+
+<p><img src="C:\Users\kirel\Documents\Универ\ITI0101 Sissejuhatus infotehnologasse\devon_reks1.jpg"
+        alt="Baby Devon Rex"></p>
+
+<a>https://taltech.ee/</a>
 
 </body>
 </html>
