--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <h1>Devon Rex</h1>
 <p>Now I'll tell you a little about my friend's favorite breed of cats.</p>
 
-<p><img src="devon_reks2.jpg"
-        alt="Adult Devon Rex"></p>
+<p><img src="http://www.samaramur.ru/images/20.jpg" alt="Adult Devon Rex"></p>
 
 <p>The Devon Rex is a breed of intelligent, tall-eared, short-haired cat that emerged in England during the late 1950s.
 They are known for their slender bodies, wavy coat, and large ears.
@@ -22,8 +21,7 @@ The Devon Rex is not allergic to her and is also a very friendly and loyal cat.
 If my friend seriously decides to get a cat, then I will definitely help her buy one,
     because the Devon Rex is a very expensive breed.</p>
 
-<p><img src="devon_reks1.jpg"
-        alt="Baby Devon Rex"></p>
+<p><img src="devon_reks1.jpg" alt="Baby Devon Rex"></p>
 
 <a>https://taltech.ee/</a>
 
