--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 They are known for their slender bodies, wavy coat, and large ears.
     This breed of cat is capable of learning difficult tricks but can be hard to motivate.</p>
 
+<table>
+    <tr>
+        <td>1</td>
+        <td>2</td>
+        <td>3</td>
+    </tr>
+</table>
+
 <p>My friend would really like to have a cat, but she is allergic to animal hair.
 She learned that animals of this breed are less likely to cause allergies and also tested this on herself.
 The Devon Rex is not allergic to her and is also a very friendly and loyal cat.
