--- a/index.html
+++ b/index.html
@@ -17,9 +17,49 @@ They are known for their slender bodies, wavy coat, and large ears.
 
 <table>
     <tr>
-        <td>1</td>
-        <td>2</td>
-        <td>3</td>
+        <td>General</td>
+        <td>Size</td>
+        <td>Medium</td>
+    </tr>
+    <tr>
+        <td>Head</td>
+        <td>Shape</td>
+        <td>Short wedge, forehead curving back ta a flat skull</td>
+    </tr>
+    <tr>
+        <td> </td>
+        <td>Forehead</td>
+        <td>Rounded</td>
+    </tr>
+    <tr>
+        <td> </td>
+        <td>Cheeks</td>
+        <td>Very prominent cheek bones, full cheeks</td>
+    </tr>
+    <tr>
+        <td> </td>
+        <td>Nose</td>
+        <td>Very short, with the rounded forehead giving the impression of a stop</td>
+    </tr>
+    <tr>
+        <td> </td>
+        <td>Muzzle/Chin</td>
+        <td>Short muzzle with a strong chin and "whisker break"</td>
+    </tr>
+    <tr>
+        <td> </td>
+        <td>Whiskers/Eyebrows</td>
+        <td>Crinkled, rather coarse and of mesium length</td>
+    </tr>
+    <tr>
+        <td>Ears</td>
+        <td>Shape</td>
+        <td>Very large, very wide at the base tapering to rounded tips</td>
+    </tr>
+    <tr>
+        <td> </td>
+        <td>Placement</td>
+        <td>Set very low</td>
     </tr>
 </table>
 
