--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 They are known for their slender bodies, wavy coat, and large ears.
     This breed of cat is capable of learning difficult tricks but can be hard to motivate.</p>
 
-<table>
+<table border="3">
     <tr>
         <td>General</td>
         <td>Size</td>
