--- a/index.html
+++ b/index.html
@@ -15,49 +15,49 @@
 They are known for their slender bodies, wavy coat, and large ears.
     This breed of cat is capable of learning difficult tricks but can be hard to motivate.</p>
 
-<table>
+<table border="1" width="30%" height="200">
     <tr>
         <td>General</td>
         <td>Size</td>
         <td>Medium</td>
     </tr>
     <tr>
-        <td>Head</td>
+        <td rowspan="6">Head</td>
         <td>Shape</td>
         <td>Short wedge, forehead curving back ta a flat skull</td>
     </tr>
     <tr>
-        <td> </td>
+
         <td>Forehead</td>
         <td>Rounded</td>
     </tr>
     <tr>
-        <td> </td>
+
         <td>Cheeks</td>
         <td>Very prominent cheek bones, full cheeks</td>
     </tr>
     <tr>
-        <td> </td>
+
         <td>Nose</td>
         <td>Very short, with the rounded forehead giving the impression of a stop</td>
     </tr>
     <tr>
-        <td> </td>
+
         <td>Muzzle/Chin</td>
         <td>Short muzzle with a strong chin and "whisker break"</td>
     </tr>
     <tr>
-        <td> </td>
+
         <td>Whiskers/Eyebrows</td>
         <td>Crinkled, rather coarse and of mesium length</td>
     </tr>
     <tr>
-        <td>Ears</td>
+        <td rowspan="2">Ears</td>
         <td>Shape</td>
         <td>Very large, very wide at the base tapering to rounded tips</td>
     </tr>
     <tr>
-        <td> </td>
+
         <td>Placement</td>
         <td>Set very low</td>
     </tr>
