--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 They are known for their slender bodies, wavy coat, and large ears.
     This breed of cat is capable of learning difficult tricks but can be hard to motivate.</p>
 
+<p>Below is a small plate on the appearance of the Devon Rex.</p>
+
 <table border="1" width="30%" height="200">
     <tr>
         <td>General</td>
@@ -71,7 +73,13 @@ If my friend seriously decides to get a cat, then I will definitely help her buy
 
 <p><img src="devon_reks1.jpg" alt="Baby Devon Rex"></p>
 
-<a>https://taltech.ee/</a>
+<h2>About me</h2>
+<p>Ma olen is Ekaterina Afanasjeva</p>
+<p>Minu matriklinumber on 206723</p>
+<p>See leht on üleni minu enda tehtud</p>
+
+<p> </p>
+<a href="https://taltech.ee/">Tallinna Tehnikaülikooli Esileht</a>
 
 </body>
 </html>
