--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ If my friend seriously decides to get a cat, then I will definitely help her buy
 <p><img src="devon_reks1.jpg" alt="Baby Devon Rex"></p>
 
 <h2>About me</h2>
-<p>Ma olen is Ekaterina Afanasjeva</p>
+<p>Ma olen Ekaterina Afanasjeva</p>
 <p>Minu matriklinumber on 206723</p>
 <p>See leht on üleni minu enda tehtud</p>
 
